# slonyara

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  bot.py  scheduler.py
app/reminders/: models.py  repository.py  service.py
bot/: __init__.py  config.py
bot/handlers/: admin.py  user.py
bot/infra/: __init__.py  sender.py
bot/models/: storage.py
bot/models/storage/: __init__.py  (+5 more)
bot/services/: reminder.py
bot/utils/: meeting_parser.py
data/: meetings.db  meetings.json
docs/: TESTING.md  architecture.md  smoke.md
slonyara/: __init__.py  __main__.py  app.py  cli.py  logging_config.py
src/slonyara/: __init__.py  services.py
telegram_meeting_bot/: __init__.py  __main__.py  config.py  logging_config.py
telegram_meeting_bot/core/: application.py  dispatcher.py  main.py  startup.py
telegram_meeting_bot/jobs/: scheduler.py
telegram_meeting_bot/keyboards/: inline.py
telegram_meeting_bot/locales/: __init__.py  messages.py
telegram_meeting_bot/models/: chat.py  event.py  user.py
telegram_meeting_bot/routers/: __init__.py  admin.py  events.py  settings.py  start.py
telegram_meeting_bot/services/: chats.py  events.py  reminders.py  telegram.py  users.py
telegram_meeting_bot/storage/: base.py  factory.py
telegram_meeting_bot/utils/: datetime.py  locks.py  metrics.py  parsing.py  texts.py
tests/: conftest.py  test_click_guard.py  test_datetime_utils.py  test_events_service.py  test_parsing.py  test_reminder_flow.py  test_safe_tg_call.py  test_services.py
(+2 files in other folders)
